@@ -1,3 +1,6 @@
+2010-04-20:
+	* (seebs) add quick sanity-check option for pseudo
+
 2010-04-19:
 	* (seebs) fix crash if xstat() or similar routine called with null path
 	* (seebs) fix list of client processes still running
